--- a/meson.build
+++ b/meson.build
@@ -1,12 +1,13 @@
 project('widgets', 'cpp', default_options : ['cpp_std=c++23'])
+fs = import('fs')
 
-c = run_command('get_srcfiles.sh', check: true)
-sources = c.stdout().strip().split('\n')
+libgtkwidgetspp_proj = subproject('gtkwidgetspp')
+libgtkwidgetspp_dep = libgtkwidgetspp_proj.get_variable('libgtkwidgetspp_dep')
 
 executable(
     'widgets',
     # sources : [ files('src/Utils/CSSUtil.cpp', 'src/Utils/PathUtil.cpp', 'src/Utils/ProcessUtil.cpp', 'src/Widgets/Widget.cpp', 'src/Widgets/Window.cpp', 'src/main.cpp') ],
-    sources,
+    sources: [ files('src/main.cpp') ],
     include_directories: include_directories('include'),
     dependencies: [
         dependency('gtk4'),
@@ -14,7 +15,8 @@ executable(
         dependency('gtk4-layer-shell-0'),
         dependency('nlohmann_json'),
         dependency('fmt'),
-        dependency('CLI11')
+        dependency('CLI11'),
+        libgtkwidgetspp_dep
     ],
     install: false
 )
